apps/cedille-wiki/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiki-cedille-ingress
  namespace: cedille-wiki
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      location /.well-known/acme-challenge/ {
        allow all;
        proxy_pass http://$host$request_uri;
        proxy_redirect off;
      }
spec:
  ingressClassName: contour
  tls:
    - secretName: wiki-tls
      hosts:
        - wiki.omni.cedille.club
  rules:
    - host: wiki.omni.cedille.club
      http:
        paths:
        - path: /.well-known/acme-challenge/
          pathType: Prefix
          backend:
            service:
              name: wiki-cedille
              port:
                number: 80
        - path: /
          pathType: Prefix
          backend:
            service:
              name: wiki-cedille
              port:
                number: 80
